--- a/app/views/layouts/projects.html.erb
+++ b/app/views/layouts/projects.html.erb
@@ -25,8 +25,8 @@
 <div id="top-nav">
 	<ul>
 			<li class=""><label for="keyword"><a href="http://dr-sauer.com"> <span>HOME</span></a></label></li>
-			 <li class=""><label for="keyword"><a href="#"><span>PROJECTS</span></a></label></li>
-			 <li class=""><label for="keyword"><a href="#"><span>MEDIA</span></a></label></li>
+			 <li class=""><label for="keyword"><a href="../projects"><span>PROJECTS</span></a></label></li>
+			 <li class=""><label for="keyword"><a href="../medias"><span>MEDIA</span></a></label></li>
 			 <li class=""><label for="keyword"><a href="#"><span>RISK</span></a></label></li>
 			 
 	</ul>
