--- a/app/views/medias/edit.html.erb
+++ b/app/views/medias/edit.html.erb
@@ -11,6 +11,11 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </p>
+  
+   <p>
+<%= image_tag @media.photo.url(:original) rescue nil %>
+  </p>
+  
   <p>
     <%= f.submit 'Update' %>
   </p>
