--- a/app/views/medias/show.html.erb
+++ b/app/views/medias/show.html.erb
@@ -6,8 +6,12 @@
 <p>
   <b>Description:</b>
   <%=h @media.description %>
+  
 </p>
 
+<p>
+<%= image_tag @media.photo.url(:original) rescue nil %>
+</p>
 
 <%= link_to 'Edit', edit_media_path(@media) %> |
 <%= link_to 'Back', medias_path %>
