--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -24,6 +24,25 @@
 <%= image_tag @project.media.photo.url(:medium) rescue nil %><br>
 
 
+<td>
+      <label for="project_media">Project Media</label><br>
+      <ul>
+	  <% for medium in @project.media.find(:all) %>
+	    
+	      <div>
+		   <label>Image:</label><%= medium.title rescue nil%><br>
+	       <%= image_tag medium.photo.url(:med) rescue nil %>
+	      </div>
+          
+	  <% end %>
+      </ul>
+    </td>
+
+
+
+
+
+
 
 <label>Units:</label><br>
 <% if @project.unit %>
