Country + States, Media Gallery

--- a/app/views/media/edit.html.erb
+++ b/app/views/media/edit.html.erb
@@ -3,15 +3,11 @@
 <% form_for(@medium) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-        <h2>Project Name</h2>
-        </label>
-        <% for project in Project.find(:all) %>
-        <div> <%= check_box_tag"medium[project_ids][]",project.id,@medium.projects.include?(project) %> <%= [project.number, "-", project.name, ] %> </div>
-        <% end %>
+ 
+  <p>  	
+	<td><label for="project">Project:</label>
+	<%= collection_select(:medium,:project_id,@projects,:id,:name) %>
  </p> 
-  
-  
   
   <p>
     <%= f.label :title %><br />
@@ -23,8 +19,85 @@
   </p>
   
    <p>
-<%= image_tag @media.photo.url(:original) rescue nil %>
+    <%= f.label :author %><br />
+    <%= f.text_field :author %>
   </p>
+  
+  <p>
+     <td class="input-date"><label for="date">Date:</label><br>
+    <%= calendar_field 'medium', 'date',
+       { :class => 'date',         
+         :field_title => 'Date',
+         :button_title => 'Show calendar' },
+       { :firstDay => 1,
+         :range => [1920, 2100],
+         :step => 1,
+         :showOthers => true,
+         :cache => true }
+      %> </td>  
+  </p>
+  
+   <p>
+    <%= f.label :publisher %><br />
+    <%= f.text_field :publisher %>
+  </p>
+  
+     <p>
+    <%= f.label :magazine %><br />
+    <%= f.text_field :magazine %>
+  </p>
+  
+  <p>
+    <%= f.label :volume %><br />
+    <%= f.text_field :volume %>
+  </p>
+  
+   <p>
+    <%= f.label :number %><br />
+    <%= f.text_field :number %>
+  </p>
+  
+   <p>
+    <%= f.label :isbn %><br />
+    <%= f.text_field :isbn %>
+  </p>
+  
+  
+   <td width=33%><label for="medium_construction_method">
+        <h2>Construction Method</h2>
+        </label>
+        <br/>
+        <% for construction_method in ConstructionMethod.find(:all) %>
+        <div> <%= check_box_tag"medium[construction_method_ids][]",construction_method.id,@medium.construction_methods.include?(construction_method) %> <%= construction_method.name %> </div>
+        <% end %>
+      </td width=25%>
+  
+	<td width=33%><label for="medium_construction_technique">
+        <h2>Special Construction Technique</h2>
+        </label>
+        <br/>
+        <% for construction_technique in ConstructionTechnique.find(:all) %>
+        <div> <%= check_box_tag"medium[construction_technique_ids][]",construction_technique.id,@medium.construction_techniques.include?(construction_technique) %> <%= construction_technique.name %> </div>
+        <% end %>
+      </td> 
+  
+  <td width=33%><label for="medium_geology">
+        <h2>Geology</h2>
+        </label>
+        <br/>
+        <% for geology in Geology.find(:all) %>
+        <div> <%= check_box_tag"medium[geology_ids][]",geology.id,@medium.geologies.include?(geology) %> <%= geology.name %> </div>
+        <% end %>
+      </td>
+      
+  
+  
+  
+  <p>
+    <%= f.label 'Photo' %><br />
+    <%= f.file_field :photo %>
+  </p>
+  
   
   <p>
     <%= f.submit 'Update' %>
