--- a/app/views/media/index.html.erb
+++ b/app/views/media/index.html.erb
@@ -12,8 +12,7 @@
 <% @media.each do |medium| %>
   <tr class="<%= alternate %>">
     
-	<td><%=image_tag medium.photo.url(:small) rescue nil %></td>
-	
+	<td><%=image_tag medium.photo.url(:thumbnail) rescue nil %></td>
 	<td><%= link_to medium.title, medium %></td>
     <td><%=h medium.description %></td>
     <td><%= link_to 'Edit', edit_medium_path(medium) %></td>
