--- a/app/views/layouts/projects.html.erb
+++ b/app/views/layouts/projects.html.erb
@@ -4,14 +4,15 @@
 
 
 <head>
-<title>Dr. G. Sauer Corp::Project DB::</title>
-<%= stylesheet_link_tag "style" %>
-<%= javascript_include_tag :defaults %>
-<%= stylesheet_link_tag "style.css" %>
-<%= stylesheet_link_tag "header.css" %>
+<title>Dr. G. Sauer Corp: Project Database</title>
+
+<%= stylesheet_link_tag('style', :media => :screen) %>
+<%= stylesheet_link_tag('header', :media => :screen) %>
+
+<%= stylesheet_link_tag('print', :media => :print)%>
+
 <%= dhtml_calendar_includes %>
-
-
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 
@@ -26,17 +27,22 @@
 </div>
 <div id="top-nav">
 	<ul>
-			<li class=""><label for="keyword"><a href="http://dr-sauer.com"> <span>HOME</span></a></label></li>
-			 <li class=""><label for="keyword"><a href="../projects"><span>PROJECTS</span></a></label></li>
-			 <li class=""><label for="keyword"><a href="../media"><span>MEDIA</span></a></label></li>
-			 <li class=""><label for="keyword"><a href="#"><span>RISK</span></a></label></li>
+			<li><a href="http://dr-sauer.com"> <span>HOME</span></a></label></li>
+			 <li><a href="/projects"><span>PROJECTS</span></a></label></li>
+			 <li><a href="/media"><span>MEDIA</span></a></label></li>
+			 <li><a href="#"><span>RISK</span></a></label></li>
 			 
 	</ul>
 </div>
 
-<div  class="wrapper", id="content">
 
-<%= yield %>
+<div  class="wrapper">
+
+<div class="print-content"><%= image_tag('favicon.ico', :class => 'print-content') %>
+<span style: "font-size=20px">Dr.G.Sauer Corporation</span></div>
+<%= yield -%>
+
+<div class="print-content"><h2>Copyright Dr.G.Sauer Corporstion</h2></div> 
 
 </div>
 </body>
