Image Sorting, Search, Pagination

--- a/app/views/layouts/projects.html.erb
+++ b/app/views/layouts/projects.html.erb
@@ -5,14 +5,12 @@
 
 <head>
 <title>Dr. G. Sauer Corp: Project Database</title>
-
 <%= stylesheet_link_tag('style', :media => :screen) %>
 <%= stylesheet_link_tag('header', :media => :screen) %>
-
 <%= stylesheet_link_tag('print', :media => :print)%>
-
-<%= dhtml_calendar_includes %>
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<%= dhtml_calendar_includes %>
+<%= javascript_include_tag :defaults %>
 </head>
 <body>
 
