--- a/app/views/layouts/media.html.erb
+++ b/app/views/layouts/media.html.erb
@@ -10,6 +10,7 @@
 <%= stylesheet_link_tag "style.css" %>
 <%= stylesheet_link_tag "header.css" %>
 <%= dhtml_calendar_includes %>
+<%= javascript_include_tag :defaults %>
 </head>
 <body>
 
