--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -328,7 +328,7 @@
 	  <% end %>  
 </div>     
   
-  <%= sortable_element('mlist',:tag =>'DIV', :constraint => false, :url => sort_projects_path) %> 
+ 
   
  </table> 
   
@@ -340,5 +340,5 @@
 <div  align = "right">
 <%= link_to 'Back', {:action => 'index'} %> |
 <%= link_to 'Edit ', {:action => 'edit'} %> |
-<%= link_to 'Delete', {:action => 'delete'} %>
+<%= link_to 'Delete', {:action => 'destroy'} %>
 
