--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,20 @@
 </head>
 <body>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div id="header"><%= image_tag('logo.png') %>
   <form action="/search" name="search" method="">
     
@@ -49,8 +63,14 @@
 
 <div class="print-content"><%= image_tag('favicon.ico', :class => 'print-content') %>
 <span style: "font-size=20px">Dr.G.Sauer Corporation</span></div>
-<%= yield -%>
+<table>
+<tr><td>
+   <%= render :partial => "shared/sidebar" %>
+</td<td>
 
+ <%= yield -%>
+</td></tr>
+</table>
 <div class="print-content"><h2>Copyright Dr.G.Sauer Corporstion</h2></div> 
 
 </div>
