--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,3 +1,5 @@
-<label><%= link_to "Overview", :root %></label><br>
-<label><%= link_to "Featured Projects", :projects %></label><br>
-<label>Advanced Search</label>
+<div id="leftnav">
+<li><%= link_to "Overview", :root %></li>
+<li><%= link_to "Featured Projects", :articles %></li>
+<li><%= link_to "Advanced Search", :root %></li>
+</div>
