--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,47 +7,17 @@
 <title>Dr. G. Sauer Corp: Project Database</title>
 <%= stylesheet_link_tag('style', :media => :screen) %>
 <%= stylesheet_link_tag('header', :media => :screen) %>
+<%= stylesheet_link_tag('custom', :media => :screen) %>
 <%= stylesheet_link_tag('print', :media => :print)%>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="/images/dsc-logo.ico" type="image/x-icon" />
 <%= dhtml_calendar_includes %>
 <%= javascript_include_tag :defaults %>
+<%= init_tinymce_hammer_if_required %>
+
 </head>
 <body>
+   <%= render :partial => "shared/header" %>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div id="header"><%= image_tag('logo.png') %>
-  <form action="/search" name="search" method="">
-    
-	
-	<% if current_user %>  
-     <%= link_to "EDIT PROFILE |", edit_user_path(:current) %>  
-     <%= link_to "LOGOUT |", logout_path %>  
-   <% else %>  
-     <%= link_to "REGISTER |", new_user_path %>  
-     <%= link_to "LOG IN |", login_path %>  
-   <% end %> 
-   
-    <label for="keyword">SEARCH
-      <input id="keyword" name="keyword" class="text" type="text">
-    </label>
-    <input src="/images/submit_arrow.png" type="image">
-  </form>
-   
-  
-</div>
 <div id="top-nav">
 	<ul>
 			<li><a href="http://dr-sauer.com"> <span>HOME</span></a></label></li>
@@ -57,20 +27,18 @@
 			 
 	</ul>
 </div>
+    <%= render :partial => "shared/sidebar" %>
+  <%= render :partial => "shared/page_header" %>
+   
+   
 
-
+   
 <div  class="wrapper">
 
-<div class="print-content"><%= image_tag('favicon.ico', :class => 'print-content') %>
-<span style: "font-size=20px">Dr.G.Sauer Corporation</span></div>
-<table>
 <tr><td>
-   <%= render :partial => "shared/sidebar" %>
-</td<td>
 
  <%= yield -%>
-</td></tr>
-</table>
+
 <div class="print-content"><h2>Copyright Dr.G.Sauer Corporstion</h2></div> 
 
 </div>
