--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,16 +35,27 @@ img {
 	border: none;
 }
 	
+
 div.wrapper {
+	position:absolute;
+	left:20%;
+	top:149px;
 	padding:20px;
 	background-color: #F2F2F2;
-	border: 1px solid black;
-	margin-top:100px;
-	margin-left:auto;
-	margin-right:auto;
-	width:90%;
+	border-left: 1px solid #9FB7CA;
+	width:77%;
 }
 
+#footer {
+	position:relative;
+	left:0px;
+	top:500px;
+	padding:20px;
+	background-color: #F2F2F2;
+	border-bottom: 3px solid #9FB7CA;
+	width:100%;
+	height:60px;
+}
 .medium  {
 	position:relative;
 	padding:15px;
