--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -328,12 +328,15 @@
 		  </div>
 		<% end %>
 		
+		
 		<script type="text/javascript">
+		  TopUp.images_path = "/images/top_up/";
           TopUp.addPresets({
             ".top_up": {
             group: "images",
             layout: "quicklook",
                          }}) </script> 
+		
 		
 	  <% end %>  
 </div>     
