--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,23 +10,24 @@
 <%= stylesheet_link_tag('custom', :media => :screen) %>
 <%= stylesheet_link_tag('print', :media => :print)%>
 
-<script type="text/javascript" src="http://gettopup.com/releases/latest/top_up-min.js"></script>  
+
+<%= javascript_include_tag :defaults%>
+
+<script type="text/javascript" src="/javascripts/top_up.js"></script>  
 
 
+ <script src="/javascripts/prototype.js" type="text/javascript"></script>
+ <script src="/javascripts/scriptaculous.js" type="text/javascript"></script>
 
 
 
 <link rel="shortcut icon" href="/images/dsc-logo.ico" type="image/x-icon" />
+
+
+
+
+
 <%= dhtml_calendar_includes %>
-<%= javascript_include_tag :defaults %>
-
-
-
-<script src="/javascripts/facebox.js" type="text/javascript"></script>
-
-
-
-
 <%= init_tinymce_hammer_if_required %>
 
 </head>
