--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,8 +25,8 @@
             <%= f.text_field :name_like %>  
           </td>  
 		  <td>  
-          <%= f.label :country_id_equals, "Country:" %>  
-          <%= f.collection_select :country_id_equals, Country.all, :id, :name, :include_blank => true %>  
+          <%= f.label :categories_id_equals, "Category:" %>  
+          <%= f.collection_select :categories_id_equals, Category.all, :id, :name, :include_blank => true %>  
        </td>  
         </tr>
 		
