--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -1,5 +1,16 @@
-<div id="page-top">
-<%= image_tag('page-top-projects.png') %>
-</div>
-
-
+<div>
+    <%= link_to image_tag "logo.png", {:class => "header-image", :href => :home } %>
+    <form action="/search" name="search" method="">
+        <% if current_user %>
+        <%= link_to "EDIT MY PROFILE", edit_user_path(:current) %>&nbsp;|&nbsp;
+		<%= link_to "LOGOUT", logout_path %>&nbsp;|&nbsp;<% else %>
+        <%= link_to "REGISTER", new_user_path %>&nbsp;|&nbsp;
+		<%= link_to "LOG IN", login_path %>&nbsp;|&nbsp;
+		
+		<% end %>
+		
+        <label for="keyword">
+            SEARCH&nbsp;<input id="keyword" name="keyword" class="text" type="text">&nbsp;
+			<%= link_to image_tag "submit_arrow.png", {:class => "header-image", :href => :home } %>
+            </form>
+        </div>
