--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,57 +1,41 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
-
-<head>
-<title>Dr. G. Sauer Corp: Project Database</title>
-<%= stylesheet_link_tag('style', :media => :screen) %>
-<%= stylesheet_link_tag('header', :media => :screen) %>
-<%= stylesheet_link_tag('custom', :media => :screen) %>
-<%= stylesheet_link_tag('print', :media => :print)%>
-
-
-<%= javascript_include_tag :defaults%>
-
-<script type="text/javascript" src="/javascripts/top_up.js"></script>  
-
-
- <script src="/javascripts/prototype.js" type="text/javascript"></script>
- <script src="/javascripts/scriptaculous.js" type="text/javascript"></script>
-
-
-
-<link rel="shortcut icon" href="/images/dsc-logo.ico" type="image/x-icon" />
-
-
-
-
-
-<%= dhtml_calendar_includes %>
-<%= init_tinymce_hammer_if_required %>
-
-</head>
-<body>
-  <%= render :partial => "shared/header" %>
-
-  <div id="top-nav">
-	<ul>
-	  <li><a href="http://dr-sauer.com"> <span>HOME</span></a></label></li>
-	  <li><a href="/projects"><span>PROJECTS</span></a></label></li>
-	  <li><a href="/media"><span>MEDIA</span></a></label></li>
-	  <li><a href="#"><span>RISK</span></a></label></li>		 
-	</ul>
-  </div>
-
-    <%= render :partial => "shared/sidebar" %>
-	
-    <%= render :partial => "shared/page_header" %>
-   <%= render :partial => "shared/footer" %>
-  <div  class="wrapper">
-    <%= yield -%>
-	  
-  </div>
-
-</body>
-
+    <head>
+        <title>Dr. G. Sauer Corp: Project Database</title>
+        <%= stylesheet_link_tag 'layout' %>
+        <%= stylesheet_link_tag('style', :media => :screen) %>
+        <%= stylesheet_link_tag('header', :media => :screen) %>
+        <%= stylesheet_link_tag('custom', :media => :screen) %>
+        <%= stylesheet_link_tag('print', :media => :print) %>
+        <%= javascript_include_tag :defaults %>
+        <script type="text/javascript" src="/javascripts/top_up.js">
+        </script>
+        <script src="/javascripts/prototype.js" type="text/javascript">
+        </script>
+        <script src="/javascripts/scriptaculous.js" type="text/javascript">
+        </script>
+        <link rel="shortcut icon" href="/images/dsc-logo.ico" type="image/x-icon" />
+        <%= dhtml_calendar_includes %>
+        <%= javascript_include_tag :defaults %>
+        <%= init_tinymce_hammer_if_required %>
+    </head>
+    <body>
+        <div id="page-header">
+            <%= render :partial => "shared/page_header" %>
+        </div>
+        <div id="top-nav">
+            <%= render :partial => 'shared/top_nav' %>
+        </div>
+        <div id="sidebar">
+            <%= render :partial => 'shared/sidebar' %>
+        </div>
+        <div id="main-area">
+            <div id="wrapper">
+                <%= yield %>
+            </div>
+        </div>
+        <div id="page-footer">
+            <%= render :partial => 'shared/page_footer' %>
+        </div>
+    </body>
 </html>
