--- a/app/views/media/index.html.erb
+++ b/app/views/media/index.html.erb
@@ -1,22 +1,21 @@
-<h1>Listing media</h1>
+<h1>Listing media</h1><br>
 
-<%if @media_count > 0 %>
- <%= @media_count %> Media found
+<%if @media_count > 0 %><br>
+ <%= @media_count %> Media found <br>
 <%= will_paginate @media %>
+<br>
 
 
-
-<table class='list'>
+<table class="media-index-table">
   <tr>
      <th></th>
      <th>Image</th>
-     <th</th>
-	
+     <th></th>
   </tr>
 
 <% @media.each do |medium| %>
-  <tr class="<%= alternate %>">		
-			<td class="symbols">
+  <tr>		
+			<td width="40px">
 			    <% if can? :read, @project %>
 				<%= link_to (image_tag("list-icons/icon-view-off.png", :border => 0, :mouseover => "list-icons/icon-view-on.png"), :action =>'show', :id => medium.id) %>
 				<% end %>
@@ -38,8 +37,8 @@
 		      </div>
 			</td>
 	          
-	        <td class="desc-list">
-	          <%= link_to medium.project.number, medium.project %>
+	        <td>
+	          <%= link_to medium.project.number, medium.project %><br>
 	          <%= link_to medium.project.name, medium.project %><br>
 	          <%= link_to medium.title, medium %><br>
 	          <%=h truncate(medium.description, :length => 50) %>
